--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "react-dom": "^16.11.0",
     "react-full-screen": "^0.2.4",
     "react-iframe": "^1.8.0",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
     "react-youtube": "^7.9.0"
   },
